syntax = "proto3";

package general;

option go_package = "github.com/hobbyfarm/gargantua/v3/protos/general";

// messages which are used across multiple services should be defined here

message ResourceId {
    string id = 1;
}

message ListOptions {
    string label_selector = 1;
}